# TFG

./: .gitignore  LICENSE  README.md  docker-compose.yml  generar_dataset.py  pyproject.toml  requirements.txt  train_modelo.py
.github/workflows/: tests.yml
app/: main.py  scheduler.py
app/models/: schema.py
app/modules/: analisis_imagen.py  analisis_texto.py  duckduckgo_image_search.py  explicacion_XAI.py  prediccion.py
app/routers/: noticia.py
app/scrapers/: APNews_scrap.py  Independent_scrap.py  Maldita_scrap.py  RTVE_scrap.py  Snopes_scrap.py  runner_scraper.py  scraper_base.py
app/services/: analisis_modulos.py
backend/: .gitignore  Dockerfile  carga_datasets_ext.py  comparativa_heu.py  comparativa_preproc.py  crear_matrices_confusion.py  descarga_fakenewsnet.py  generar_dataset.py  pyproject.toml  requirements.txt  train_modelo.py
backend/app/: database.py  main.py  scheduler.py
backend/app/models/: schema.py
backend/app/modules/: analisis_imagen.py  analisis_texto.py  explicacion_XAI.py  explicacion_automatica.py  prediccion.py
backend/app/routers/: noticia.py
backend/app/scrapers/: APNews_scrap.py  Independent_scrap.py  Newtral_scrap.py  RTVE_scrap.py  Snopes_scrap.py  VeinteMin_scrap.py  runner_scraper.py
backend/app/services/: analisis_modulos.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/constants/: i18n.js  theme.js  translations.js
frontend/src/hooks/: useAnalysis.js
frontend/src/pages/: AnalyzePage.jsx  DashboardPage.jsx  HomePage.jsx  (+2 more)
(+5 files in other folders)
