[project]
name = "fastapi-tfg"
version = "0.1.0"
description = "Sistema de detección de Fake News multimodal"
authors = [
    {name = "anarajer10",email = "anarajer@correo.ugr.es"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "newspaper4k",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "pysentimiento>=0.7.3",
    "spacy>=3.8.13",
    "pillow>=10.4.0",
    "langdetect (>=1.0.9,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
